--- a/app/.env
+++ b/app/.env
@@ -26,8 +26,8 @@ APP_SECRET=327211399c90ce2dbe18f84ac847db19
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL=mysql://symfony:symfony@mysql:3306/symfony
-#DATABASE_URL="mysql://20_wroblewska:julia6022@127.0.0.1:3306/20_wroblewska?serverVersion=8&charset=utf8mb4"
+#DATABASE_URL=mysql://symfony:symfony@mysql:3306/symfony
+DATABASE_URL="mysql://20_wroblewska:julia6022@127.0.0.1:3306/20_wroblewska?serverVersion=8&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
